# omni-doc

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  report.md  substack-article.md
.github/workflows/: test.yml  update-major-tag.yml
.github/workflows/examples/: advanced.yml  basic.yml
action/: action.yml
src/omni_doc/: __init__.py  __main__.py  cli.py  config.py  py.typed
src/omni_doc/agents/: __init__.py  base.py  correction.py  technical_writer.py  visual_architect.py
src/omni_doc/github/: __init__.py  client.py  commenter.py  pr_fetcher.py
src/omni_doc/graph/: __init__.py  main_graph.py  routing.py
src/omni_doc/mcp/: __init__.py  server.py  types.py
src/omni_doc/models/: __init__.py  output_models.py  state.py
src/omni_doc/nodes/: __init__.py  aggregator.py  auditor.py  critic.py  discovery.py  extractor.py  repo_scanner.py
src/omni_doc/utils/: __init__.py  logging.py  markdown.py  mermaid.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_diff.patch  sample_pr_files.json  sample_pr_response.json
tests/integration/: __init__.py  test_graph.py
tests/unit/: __init__.py  test_agents.py  test_github.py  test_mcp_server.py  test_nodes.py
