[tool.poetry]
name = "omni-doc"
version = "0.1.0"
description = "AI-powered documentation analysis for GitHub pull requests using LangGraph and Gemini"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "omni_doc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2"
langchain-google-genai = "^2.0"
fastmcp = "^2.0"
mcp = "^1.0"
typer = {extras = ["all"], version = "^0.15"}
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
rich = "^13.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.0"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[tool.poetry.scripts]
omni-doc = "omni_doc.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_google_genai.*", "fastmcp.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
